--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.42.0
-numpy==1.26.4
-pandas==2.2.3
-scipy==1.13.0
-matplotlib==3.8.4
+streamlit>=1.30.0
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+reportlab>=3.6.0
+Pillow>=10.0.0
